2008-03-03  Sven Herzberg  <sven@imendio.com>

	Fixes: MB#1276: wrong allocators used in hildon_window_get_borders

	* src/hildon-window.c: (hildon_window_get_borders): don't imply any
	knowledge about the border allocators used within GTK+

2008-02-26  Sven Herzberg  <sven@imendio.com>

	Fixes: MB#2981: Build with asserts broken

	* src/hildon-date-editor.c,
	* src/hildon-number-editor.c,
	* src/hildon-time-editor.c,
	* src/hildon-weekday-picker.c: replace HILDON_IS_EDITOR_EDITOR by a
	the proper GType instance check

2008-02-25  Sven Herzberg  <sven@imendio.com>

	Fixed: MB#1221: HildonWindow shouldn't call show_all for GtkMenu

	* doc/Makefile.am: tell gtk-doc about HILDON_DISABLE_DEPRECATED
	* examples/hildon-window-menu-example.c: (main): explicitly show
	the menu item
	* src/hildon-window.c:
	(hildon_window_set_main_menu): moved most of the code from set_menu()
	to this place; skipped the call to gtk_widget_show_all(); also didn't
	introduce gtk_widget_show() as gtk_menu_popup() will call that anyways
	(hildon_window_set_menu): removed most of the code, just keep the
	questionable gtk_widget_show_all()
	* src/hildon-window.h: added the new function and deprecate the old
	one

2008-01-10  Xan Lopez  <xan.lopez@nokia.com>

	[2.0.1-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2008-01-10  Xan Lopez  <xan.lopez@nokia.com>

	* configure.ac:
	* pkgconfig/Makefile.am:
	* pkgconfig/hildon.pc.in:
	* src/Makefile.am:

	Do not use PACKAGE_VERSION_MAJOR as the API revision,
	use newly created API_MAJOR_VERSION.
	
2008-01-09  Xan Lopez  <xan.lopez@nokia.com>

	[2.0.0-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2008-01-09  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-color-chooser.c (hildon_color_chooser_class_init): 

	Add outer_border style property, we use it but don't define it (!).

	Fixes NB#75310

2007-12-21  Xan Lopez  <xan.lopez@nokia.com>

	* examples/hildon-bread-crumb-trail-example.c (main): 
