@@ -1,5 +1,15 @@
 2008-03-03  Sven Herzberg  <sven@imendio.com>
 
+	Fixes: MB#1220: HildonWindow should take GtkMenu accel_group into account
+
+	* examples/hildon-window-menu-example.c: (main): extended the window
+	menu example to serve as a testcase for automatically added
+	accelerator groups, too
+	* src/hildon-window.c: (hildon_window_add_accel_group),
+	(hildon_window_set_menu): added patch by Tommi Komulainen
+
+2008-03-03  Sven Herzberg  <sven@imendio.com>
+
 	Fixes: MB#1276: wrong allocators used in hildon_window_get_borders
 
 	* src/hildon-window.c: (hildon_window_get_borders): don't imply any
